<?xml version="1.0"?>
<package format="3">
  <name>lidar_ros_driver</name>
  <version>1.0.0</version>
  <description>O-Net LiDAR ROS Driver</description>
  <maintainer email="lidar@o-netcom.com">Wenjie Xiao</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gtest</build_depend>
  <build_depend>rosbag2</build_depend>
  <build_depend>rcpputils</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_export_depend>gtest</build_export_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>gtest</exec_depend>
  <exec_depend>rosbag2</exec_depend>
  <test_depend>rosunit</test_depend>
  <exec_depend>rcpputils</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
