<?xml version="1.0"?>
<package format="3">
  <name>common_msgs</name>
  <version>1.0.0</version>
  <description>The common_msg package</description>
  <maintainer email="lidar@o-netcom.com">Wenjie Xiao</maintainer>
  <license>BSD</license>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <!--<build_depend>message_generation</build_depend>-->
  <!--<build_export_depend>roscpp</build_export_depend>-->
  <!--<build_export_depend>std_msgs</build_export_depend>-->
  <!--<exec_depend>roscpp</exec_depend>-->
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!--<exec_depend>message_runtime</exec_depend>-->
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
